--- a/src/app/features/json-form/json-form.css
+++ b/src/app/features/json-form/json-form.css
@@ -61,3 +61,36 @@ table{
     border-collapse: separate;
     border-spacing: 1rem 0.5rem;
 }
+
+.json-editor{
+  position: relative;
+  isolation: isolate;
+
+  .error-message{
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: min(90%,50rem);
+    padding: 2.5rem;
+    border-radius: 1.2rem;
+    color: white;
+    z-index: 2;
+  }
+
+  &:has(.error-message){
+    &:after{
+      content: '';
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      top : 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: #00000025;
+      z-index: -1;
+    }
+  }
+
+}
