--- a/src/app/features/json-form/json-form.css
+++ b/src/app/features/json-form/json-form.css
@@ -13,17 +13,22 @@
   .inner-form-group {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 0.75rem;
     .form-label,
     .inner-form-label {
       font-size: 1.7rem;
       text-transform: capitalize;
+      font-weight: 500;
     }
   }
   .inner-form-group {
     padding-left: 2.5rem;
     flex-direction: row;
     align-items: center;
+    .inner-form-label {
+      font-weight: 400;
+      font-size: 1.5rem;
+    }
   }
 }
 
@@ -57,34 +62,34 @@
   }
 }
 
-table{
-    border-collapse: separate;
-    border-spacing: 1rem 0.5rem;
+table {
+  border-collapse: separate;
+  border-spacing: 1rem 0.5rem;
 }
 
-.json-editor{
+.json-editor {
   position: relative;
   isolation: isolate;
 
-  .error-message{
+  .error-message {
     position: absolute;
     top: 30%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: min(90%,50rem);
+    width: min(90%, 50rem);
     padding: 2.5rem;
     border-radius: 1.2rem;
     color: white;
     z-index: 2;
   }
 
-  &:has(.error-message){
-    &:after{
+  &:has(.error-message) {
+    &:after {
       content: '';
       width: 100%;
       height: 100%;
       position: absolute;
-      top : 0;
+      top: 0;
       left: 0;
       right: 0;
       bottom: 0;
@@ -92,5 +97,4 @@ table{
       z-index: -1;
     }
   }
-
 }
