--- a/src/app/features/json-form/json-form.css
+++ b/src/app/features/json-form/json-form.css
@@ -81,6 +81,7 @@ table {
     border-radius: 1.2rem;
     color: white;
     z-index: 2;
+    backdrop-filter: blur(2px);
   }
 
   &:has(.error-message) {
